extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr4b.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr4b.obr:16:17:error: ':=' expected but 'D' found
   DivideByZero DO
                ^
